Bug 1789097 - Port bug 1788273: Tweak popup alignment so that it looks good on mirrored wayland popups. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D156367

--- a/mail/themes/linux/mail/popupPanel.css
+++ b/mail/themes/linux/mail/popupPanel.css
@@ -13,3 +13,8 @@
 html|input.editContactTextbox {
   padding: 3px 6px;
 }
+
+#messageHeaderCustomizationPanel {
+  margin-top: -10px;
+  margin-inline-end: 1px;
+}
