--- a/mail/themes/osx/mail/panelUI.css
+++ b/mail/themes/osx/mail/panelUI.css
@@ -4,6 +4,14 @@
 
 @import url("chrome://messenger/skin/shared/panelUI.css");
 
+#appMenu-popup {
+  margin-top: 4px;
+}
+
+#appMenu-popup {
+  margin-inline: 0 -8px;
+}
+
 .panel-subview-body {
   scrollbar-color: color-mix(in srgb, currentColor 26%, transparent) transparent;
 }
