--- a/mail/themes/shared/mail/panelUI.css
+++ b/mail/themes/shared/mail/panelUI.css
@@ -109,17 +109,6 @@ panelmultiview[transitioning] > .panel-viewcontainer > .panel-viewstack > panelv
   overflow-y: hidden;
 }
 
-/* This section is to anchor all the drop down panels at the same height, shift the
-  panel`s top margin according to its positioning and the uidensity of the window. */
-#widget-overflow,
-#appMenu-popup {
-  margin-top: -4px;
-}
-
-#appMenu-popup {
-  margin-inline-start: 0;
-}
-
 .panel-subview-body {
   overflow-y: auto;
   overflow-x: hidden;
